log
Tue 23 Apr 2024 01:24:58 AM UTC: 
 tests:  0|6
total_score: 0/70
7df9e87
Tue 23 Apr 2024 01:27:31 AM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
85d5d6d
Tue 23 Apr 2024 01:34:01 AM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:14: error: ‘Pair’ has no member named ‘next’
   74 |     par = par->next;
      |              ^~
Compilation failed
d4a8a23
Tue 23 Apr 2024 01:34:39 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
183a76a
